fix word wrapping issue

--- a/client/src/components/CustomDataDisplay/styles.css
+++ b/client/src/components/CustomDataDisplay/styles.css
@@ -28,5 +28,7 @@
 
 .data-text {
   color: #f9f7f7; 
-  font-size: 20px; 
+  font-size: 20px;
+  white-space: nowrap;
 }
+
